[gd_scene load_steps=2 format=3 uid="uid://d3vbjij1nq614"]

[ext_resource type="Script" uid="uid://drcdwecluk6b4" path="res://examples/demo.gd" id="1_demo"]

[node name="Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_demo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Godot-Vodozemac Demo"
horizontal_alignment = 1

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select an example to run and see the output below:"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BasicEncryptionButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Run Basic Encryption"

[node name="SessionPersistenceButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Run Session Persistence"

[node name="ClearButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Clear Output"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Output:"

[node name="OutputPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/OutputPanel"]
layout_mode = 2
follow_focus = true

[node name="OutputText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/OutputPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
scroll_following = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/BasicEncryptionButton" to="." method="_on_basic_encryption_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/SessionPersistenceButton" to="." method="_on_session_persistence_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/ClearButton" to="." method="_on_clear_button_pressed"]
